# hop

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  hop_spec.md  omen.toml  pyproject.toml  smoke.test.ts
.dust/config/: settings.json
.dust/facts/: hop-session-model-and-command-contract.md  hop-spec-is-canonical-product-context.md  hop-target-dispatch-and-behavior-guarantees.md
.dust/ideas/: 100-test-coverage.md  add-typechecking-and-lint-for-python-code.md  bridge-hop-cli-calls-from-non-host-backends.md  define-browser-session-isolation.md  fix-hop-times-out-with-timed-out-waiting-for-kitty-to-respond.md  fix-kitty-remote-control-endpoint-selection-and-timeout-errors.md  hop-kill.md  mirror-kittys-native-remote-control-endpoint-selection-and-actionable-timeout-errors.md
.dust/principles/: keep-the-spec-aligned.md  no-defensive-donts.md  one-shared-editor-per-session.md  (+3 more)
docs/: devcontainer.md  hop-ssh.md  ssh-devcontainer.md  ssh.md  vigun.md
hop/: __init__.py  __main__.py  app.py  backends.py  bridge.py  browser.py  cli.py  commands.py  config.py  daemon.py  daemon_lock.py  debug.py  editor.py  errors.py  focused.py  kitty.py  layouts.py  popup.py  reconciler.py  session.py  state.py  sway.py  targets.py  vicinae.py
kittens/: __init__.py
pytest/: __init__.py  __main__.py  _compat.py
sway/: hop-kill-session  hop-term-or-kitty
tests/: test_app.py  test_backends.py  test_bridge.py  test_browser.py  test_browser_commands.py  test_browser_internals.py  test_cli.py  test_config.py  test_daemon.py  test_daemon_lock.py  test_debug.py  test_edit_commands.py  test_editor.py  test_editor_internals.py  test_entrypoints.py  test_errors.py  test_focused.py  test_kill_command.py  test_kitty.py  test_kitty_internals.py  test_layouts.py  test_move_command.py  test_open_command.py  test_open_selection_commands.py  test_open_selection_kitten.py  test_popup.py  test_reconciler.py  test_remote_ssh.py  test_run_commands.py  test_session.py  test_session_commands.py  test_small_gap_coverage.py  test_state.py  test_sway.py  test_sway_internals.py  test_tail_commands.py  test_targets.py  test_term_commands.py  test_vicinae.py  test_vigun_contract.py  (+1 more)
vicinae/: hop-kill-session  hop-move-window-to-session  hop-switch-session  hop-window
(+67 files in other folders)
