[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hop"
version = "0.1.0"
description = "Session-oriented workspace CLI for Sway, Kitty, and Neovim."
readme = "hop_spec.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hop = "hop.cli:main"

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.uv]
default-groups = ["dev"]
