[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "hop"
version = "0.1.0"
description = "Session-oriented workspace CLI for Sway, Kitty, and Neovim."
readme = "hop_spec.md"
requires-python = ">=3.12"
dependencies = []

[project.scripts]
hop = "hop.cli:main"
hopd = "hop.daemon:main"

[dependency-groups]
dev = [
  "pyright>=1.1.408",
  "pytest>=8.4.0",
  "pytest-cov>=7.1.0",
  "ruff>=0.15.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.ruff]
line-length = 120
# Pin first-party explicitly and disable filesystem auto-detection. Without
# this, a stray `<thirdparty>/__pycache__/` directory at the project root
# (e.g. accidentally created by `python -m something <name>`) would make ruff
# classify that name as first-party and silently disagree with CI.
src = []

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["hop", "kittens"]

[tool.uv]
default-groups = ["dev"]
